<resources>
    <string name="app_name">SystemInfo</string>

    <!-- strings for the navigation bar -->
    <string name="title_system">System</string>
    <string name="title_screen">Screen</string>
    <string name="title_hardware">Hardware</string>

    <!-- strings for the main menu -->
    <string name="action_about">About</string>

    <!-- strings for the about box -->
    <string name="about_title">About application…</string>
    <string name="about_version">Version:</string>
    <string name="about_description">Useful information about your device</string>
    <string name="about_copyright">©2017&#8211;2018, Tony Guyot</string>

    <!-- strings for the system view -->
    <string name="system_android_version">Android version %s</string>
    <string name="system_api_level">API level %d</string>
    <string name="system_locale">Current locale is %s</string>

    <!-- strings for the screen view -->
    <string name="screen_density">Density:</string>
    <string name="screen_size">Size:</string>
    <string name="screen_orientation">Orientation:</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="screen_orientation_undefined">Undefined</string>
    <string name="screen_font_scaling">Font scaling:</string>

    <!-- strings for the hardware view -->
    <string name="hardware_brand_label">Brand:</string>
    <string name="hardware_product_label">Product:</string>
    <string name="hardware_ram_size">RAM size:</string>
    <string name="hardware_storage_size">Storage size:</string>
    <string name="hardware_show_size">%s (%s available)</string>
</resources>
