<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- icon + name of the application -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/about_name"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:drawableStart="@mipmap/ic_launcher"
        android:drawableLeft="@mipmap/ic_launcher"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        />

    <!-- version number -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_version"
        android:id="@+id/about_version"
        android:paddingBottom="10dp"
        />

    <!-- short description/motto of the application -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_description"
        android:id="@+id/about_description"
        android:paddingBottom="10dp"
        />

    <!-- copyright/author -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_copyright"
        android:id="@+id/about_copyright"
        />

    <!-- the OK button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_ok"
        android:text="@android:string/ok"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>