<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hardwareView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <!-- Manufacturer + model name (title) -->
    <TableRow
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/hardwareTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:fontFamily="@font/candal"
            android:textSize="@dimen/title_font_size"
            android:layout_span="2"
            />
    </TableRow>

    <!-- Brand name -->
    <TableRow
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/hardware_brand_label"
            android:textSize="@dimen/content_font_size"
            />

        <TextView
            android:id="@+id/hardwareBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/content_font_size" />
    </TableRow>

    <!-- Product name -->
    <TableRow
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/hardware_product_label"
            android:textSize="@dimen/content_font_size"
            />
        <TextView
            android:id="@+id/hardwareProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/content_font_size"
            />
    </TableRow>

    <!-- RAM size -->
    <TableRow
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/hardware_ram_size"
            android:textSize="@dimen/content_font_size"
            />
        <TextView
            android:id="@+id/hardwareRamSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/content_font_size"
            />
    </TableRow>

    <!-- internal storage -->
    <TableRow
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/hardware_storage_size"
            android:textSize="@dimen/content_font_size"
            />
        <TextView
            android:id="@+id/hardwareStorageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/content_font_size"
            />
    </TableRow>

</TableLayout>